# Th3Scr1b3Pr0j3ct

./: .gitignore  Dockerfile  ReadMe.md  docker-compose.yml  pyproject.toml
data/seed/: bernard_concepts.ttl
requirements/: exigences.md  spec-iteration-1.md
src/model/: assertions.py  concept.py  identity.py  representation.py
src/seed/: load_concepts.py
src/storage/: turtle_store.py
src/ui/: app.py
src/ui/views/: concept_create.py  concept_edit.py  concept_list.py  representation_edit.py
tests/: test_assertions.py  test_concept.py  test_identity.py  test_representation.py  test_storage.py
