[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "th3scr1b3pr0j3ct"
version = "0.1.0"
description = "Gestionnaire de référentiels conceptuels — Th3Sr1b3Pr0j3ct"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
